# src/UnicornFarmBundle/Controller/Rest/UnicornController.php
@@ -2,6 +2,7 @@
 
 namespace UnicornFarmBundle\Controller\Rest;
 
+use Doctrine\Common\Collections\ArrayCollection;
 use Swagger\Annotations as SWG;
 use Symfony\Bundle\FrameworkBundle\Controller\Controller;
 use Symfony\Component\HttpFoundation\Response;
@@ -10,7 +11,12 @@ use Symfony\Component\Routing\Annotation\Route;
 use Symfony\Component\Serializer\Encoder\JsonEncoder;
 use Symfony\Component\Serializer\Normalizer\ObjectNormalizer;
 use Symfony\Component\Serializer\Serializer;
+use UnicornFarmBundle\Entity\Post;
+use UnicornFarmBundle\Entity\Unicorn;
+use UnicornFarmBundle\Entity\User;
+use UnicornFarmBundle\Service\PostService;
 use UnicornFarmBundle\Service\UnicornService;
+use UnicornFarmBundle\Service\UserService;
 
 class UnicornController extends Controller
 {
@@ -20,6 +26,16 @@ class UnicornController extends Controller
     private $unicornService;
 
     /**
+     * @var PostService
+     */
+    private $postService;
+
+    /**
+     * @var UserService
+     */
+    private $userService;
+
+    /**
      * @var serializer
      */
     private $serializer;
@@ -27,17 +43,25 @@ class UnicornController extends Controller
     /**
      * UnicornController constructor.
      * @param UnicornService $unicornService
+     * @param PostService $postService
+     * @param UserService $userService
      */
-    public function __construct(UnicornService $unicornService)
+    public function __construct(UnicornService $unicornService, PostService $postService, UserService $userService)
     {
         $this->unicornService = $unicornService;
-        $this->serializer = new Serializer([new ObjectNormalizer()], ['json' => new JsonEncoder()]);
+        $this->postService = $postService;
+        $this->userService = $userService;
+
+        $normalizer = new ObjectNormalizer();
+        $normalizer->setCircularReferenceLimit(1);
+        $normalizer->setCircularReferenceHandler(function ($object) { return $object->getId(); });
+        $this->serializer = new Serializer([$normalizer], ['json' => new JsonEncoder()]);
     }
 
     /**
      * @SWG\Info(
      *      title="The Unicorns farm API",
-     *      version="1.0.0",
+     *      version="3.0.0",
      *      description="This is a unicorn farm.
      *                  No authorization is required to use this API.
      *                  This documentation was generated by swagger. You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).",
@@ -74,21 +98,33 @@ class UnicornController extends Controller
      *      description="Get a list of all the unicorns in the farm",
      *      operationId="listAction",
      *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="order",
-     *          in="query",
-     *          description="Order criterion",
-     *          type="string",
-     *      ),
-     *      @SWG\Parameter(
-     *          name="page",
-     *          in="query",
-     *          description="Page number",
-     *          type="integer",
-     *      ),
      *      @SWG\Response(
      *          response=200,
      *          description="Success",
+     *          examples={
+     *              "application/json":{
+     *                  {
+     *                      "id":1,
+     *                      "name":"pinky",
+     *                      "description":"pink fury",
+     *                      "available":false,
+     *                      "user": {
+     *                          "id":1,
+     *                          "firstName":"David",
+     *                          "lastName":"",
+     *                          "email":"",
+     *                      },
+     *                      "posts": {},
+     *                  },{
+     *                      "id":2,
+     *                      "name":"blacky",
+     *                      "description":"black fury",
+     *                      "available":true,
+     *                      "user":null,
+     *                      "posts": {},
+     *                  },
+     *              }
+     *          }
      *      )
      * )
      *
@@ -98,11 +134,8 @@ class UnicornController extends Controller
      */
     public function listAction(Request $request)
     {
-        $order = $request->get('order');
-        $page = $request->query->get('page', 1);
-
         $unicorns = $this->serializer->serialize(
-            $this->unicornService->getAllUnicorns($page, $order),
+            $this->unicornService->getAllUnicorns(),
             'json'
         );
 
@@ -119,6 +152,32 @@ class UnicornController extends Controller
      */
     public function testAction(Request $request)
     {
+
+        $newUser = $this->userService->addUser("John", "Doe", "jd@mail.com");
+        $newUnicorn = $this->unicornService->addUnicorn("Blanko33");
+        $newPost = $this->postService->addPost($newUser, "test text");
+
+        /*
+        $newUser = new User();
+        $newUser->setFirstName("John");
+        $newUser->setLastName("Doe");
+        $newUser->setEmail("jd@mail.com");
+
+        $newUnicorn = new Unicorn();
+        $newUnicorn->setName("Blanko");
+
+        $newPost = new Post();
+        $newPost->setText("test");
+        $newPost->setUser($newUser);
+        $newPost->setUnicorn($newUnicorn);
+
+        $em = $this->getDoctrine()->getManager();
+        $em->persist($newUser);
+        //$em->persist($newUnicorn);
+        $em->persist($newPost);
+        $em->flush();
+        */
+
         $unicorn = $this->serializer->serialize($this->unicornService->getUnicorn(1), 'json');
         return new Response($unicorn);
     }
